# corpus_generator

./: Cargo.toml  HOWTO.md  README.md  Rocket.toml  corpus.sh  migrate_to_http.sh  server.sh
.cargo/: config.toml
public/corpus/: p1_train.txt  p2_blacklist.txt
src/: corpus.rs  cors.rs  error.rs  main.rs  named_binary.rs
