[package]
name = "corpus_generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand           = "0.8.4"
sha2           = "0.9.8"
rand_xoshiro   = "0.6.0"
tokio          = "1.12.0"
async-trait    = "0.1.51"
derive_builder = "0.10.2"
thiserror      = "1.0.29"
bzip2          = {version = "0.4.3", features = ["tokio"]}
rocket         = {version = "0.5.0-rc.1", features = ["tls"], git = "https://github.com/SergioBenitez/Rocket"}
structopt      = "0.3.23"
